--- a/interfaces/_utils_initialize_.iinitxfieldmap.html
+++ b/interfaces/_utils_initialize_.iinitxfieldmap.html
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">applicant<wbr>Maps<span class="tsd-signature-symbol">:</span> <a href="_types_.ixfieldmap.html" class="tsd-signature-type">IXFieldMap</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">E</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><a href="_types_.ixfieldmap.html" class="tsd-signature-type">IXFieldMap</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">E</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/IgorSzyporyn/formalizer-core/blob/5bc1d7d/src/utils/initialize.ts#L43">utils/initialize.ts:43</a></li>
+							<li>Defined in <a href="https://github.com/IgorSzyporyn/formalizer-core/blob/b134ac9/src/utils/initialize.ts#L43">utils/initialize.ts:43</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -117,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">x<wbr>Field<wbr>Core<wbr>Map<span class="tsd-signature-symbol">:</span> <a href="_types_.ixfieldmap.html" class="tsd-signature-type">IXFieldMap</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">E</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/IgorSzyporyn/formalizer-core/blob/5bc1d7d/src/utils/initialize.ts#L44">utils/initialize.ts:44</a></li>
+							<li>Defined in <a href="https://github.com/IgorSzyporyn/formalizer-core/blob/b134ac9/src/utils/initialize.ts#L44">utils/initialize.ts:44</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -187,7 +187,7 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_utils_initialize_.iinitvalueprops.html" class="tsd-kind-icon">IInit<wbr>Value<wbr>Props</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter">
@@ -214,10 +214,10 @@
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="_utils_initialize_.iregisterxfield.html" class="tsd-kind-icon">IRegisterXField</a>
 					</li>
-					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="../modules/_utils_initialize_.html#initvalue" class="tsd-kind-icon">init<wbr>Value</a>
 					</li>
-					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="../modules/_utils_initialize_.html#initxfieldarraycapability" class="tsd-kind-icon">initXField<wbr>Array<wbr>Capability</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
@@ -226,13 +226,13 @@
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="../modules/_utils_initialize_.html#initxfieldmap" class="tsd-kind-icon">initXField<wbr>Map</a>
 					</li>
-					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="../modules/_utils_initialize_.html#initxfieldobjectcapability" class="tsd-kind-icon">initXField<wbr>Object<wbr>Capability</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="../modules/_utils_initialize_.html#initxfieldrefmap" class="tsd-kind-icon">initXField<wbr>Ref<wbr>Map</a>
 					</li>
-					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="../modules/_utils_initialize_.html#initxfieldstatehandlers" class="tsd-kind-icon">initXField<wbr>State<wbr>Handlers</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
