--- a/modules/_utils_xfieldobjectvalues_.html
+++ b/modules/_utils_xfieldobjectvalues_.html
@@ -73,7 +73,7 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter"><a href="_utils_xfieldobjectvalues_.html#enhancexfieldwithobjectvalues" class="tsd-kind-icon">enhanceXField<wbr>With<wbr>Object<wbr>Values</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_utils_xfieldobjectvalues_.html#enhancexfieldwithobjectvalues" class="tsd-kind-icon">enhanceXField<wbr>With<wbr>Object<wbr>Values</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,29 +81,23 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="enhancexfieldwithobjectvalues" class="tsd-anchor"></a>
 					<h3>enhanceXField<wbr>With<wbr>Object<wbr>Values</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">enhanceXField<wbr>With<wbr>Object<wbr>Values&lt;E&gt;<span class="tsd-signature-symbol">(</span>xField<span class="tsd-signature-symbol">: </span><a href="../interfaces/_types_.ixfieldprops.html" class="tsd-signature-type">IXFieldProps</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">E</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">enhanceXField<wbr>With<wbr>Object<wbr>Values<span class="tsd-signature-symbol">(</span>xField<span class="tsd-signature-symbol">: </span><a href="../interfaces/_types_.ixfieldprops.html" class="tsd-signature-type">IXFieldProps</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/IgorSzyporyn/formalizer-core/blob/5bc1d7d/src/utils/xFieldObjectValues.ts#L4">utils/xFieldObjectValues.ts:4</a></li>
+									<li>Defined in <a href="https://github.com/IgorSzyporyn/formalizer-core/blob/b134ac9/src/utils/xFieldObjectValues.ts#L4">utils/xFieldObjectValues.ts:4</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-type-parameters-title">Type parameters</h4>
-							<ul class="tsd-type-parameters">
-								<li>
-									<h4>E</h4>
-								</li>
-							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>xField: <a href="../interfaces/_types_.ixfieldprops.html" class="tsd-signature-type">IXFieldProps</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">E</span><span class="tsd-signature-symbol">&gt;</span></h5>
+									<h5>xField: <a href="../interfaces/_types_.ixfieldprops.html" class="tsd-signature-type">IXFieldProps</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -176,7 +170,7 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_utils_xfieldobjectvalues_.html#enhancexfieldwithobjectvalues" class="tsd-kind-icon">enhanceXField<wbr>With<wbr>Object<wbr>Values</a>
 					</li>
 				</ul>
